fix linebreak in clock

--- a/cmaps80.css
+++ b/cmaps80.css
@@ -23,9 +23,9 @@
 .clock {
     position:fixed; 
     bottom:0px; 
-    width: 170px;
+    width: 180px;
     left: 50%;
-    margin-left: -95px; 
+    margin-left: -100px; 
     text-align:center;
     background-color: #333;
     border-radius: 10px 10px 0px 0px;
